2006-05-27  Paul J Stevens <paul@nfg.nl>

	* debian/control, debian/rules:
	fix debian setup so we can build on ubuntu breezy
	* man/dbmail-timsieved.txt:
	fix typo in dbmail-timsieved.txt
	* modules/dbsqlite.c:
	add missing function to sqlite module
	* dbmail-message.c:
	disable savepoint support for now

2006-05-26  Paul J Stevens <paul@nfg.nl>

	* debian/changelog, dm_imaputil.c:
	properly descend into multipart containing rfc822 subpart

2006-05-24  Aaron Stone  <aaron@serendipity.cx>

	* misc.c:
	dm_stresc should not check the returns values of g_new0 or
	db_string_escape; there's nothing to check for (closes bug #352).

2006-05-23  Paul J Stevens <paul@nfg.nl>

	* debian/changelog, debian/control, debian/dbmail-dev.files, 
	  debian/dbmail-dev.install, debian/dbmail-ldap.files, 
	  debian/dbmail-ldap.install, debian/dbmail-mysql.files, 
	  debian/dbmail-mysql.install, debian/dbmail-pgsql.files, 
	  debian/dbmail-pgsql.install, debian/dbmail-sieve.files, 
	  debian/dbmail-sieve.install, debian/dbmail-sqlite.files, 
	  debian/dbmail-sqlite.install, debian/dbmail.install, 
	  debian/dbmail.postinst, debian/dbmail.postrm, debian/rules:
	replace db_movefiles with dh_install and fix some lintian warnings
	* man/Makefile.am:
	make sure manpage for dbmail-timsieved gets build
	* dbmail-mailbox.c:
	fix empty sort results
	* acl.c:
	compiler warning
	* dbmailtypes.h:
	remove unused values in search_key_t
	* debian/dbmail-mysql.install, debian/dbmail-pgsql.install, 
	  debian/dbmail-sieve.install, debian/dbmail.install:
	reinstall all so* modules

2006-05-22  Paul J Stevens <paul@nfg.nl>

	* sort.c:
	add INFO level trace to sort_deliver_to_mailbox
	* debian/rules, man/dbmail-export.8, man/dbmail-imapd.8, 
	  man/dbmail-lmtpd.8, man/dbmail-pop3d.8, man/dbmail-sievecmd.8, 
	  man/dbmail-smtp.1, man/dbmail-timsieved.8, man/dbmail-timsieved.txt, 
	  man/dbmail-users.8, man/dbmail-util.8, man/dbmail.1, 
	  man/dbmail.conf.5:
	remove post-make files from man/