@@ -1,3 +1,4 @@
+<<<<<<< .mine
 2006-05-27  Paul J Stevens <paul@nfg.nl>
 
 	* debian/control, debian/rules:
@@ -9,6 +10,13 @@
 	* dbmail-message.c:
 	disable savepoint support for now
 
+=======
+2006-05-26  Aaron Stone  <aaron@serendipity.cx>
+
+	* sievecmd.h, sievecmd.c:
+	Added new option '-c [scriptname]' to print out a script.
+
+>>>>>>> .r2138
 2006-05-26  Paul J Stevens <paul@nfg.nl>
 
 	* debian/changelog, dm_imaputil.c:
